Small fix: hide overflow on HTML and transform scale landing page button.

--- a/frontend/my-react-app/public/styles/index.css
+++ b/frontend/my-react-app/public/styles/index.css
@@ -1,3 +1,8 @@
+html {
+    height: 100%;
+    overflow: hidden;
+}
+
 body, button, input, select {
     margin: 0px;
     font-family: "Rubik", sans-serif;
