--- a/frontend/my-react-app/public/styles/pages.css
+++ b/frontend/my-react-app/public/styles/pages.css
@@ -7,7 +7,6 @@
     background-image: url("../assets/Main Menu/BG.svg");
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
     background-position: center;
 }
 
@@ -128,7 +127,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    gap: 10px;
+    gap: 20px;
 }
 
 .page-button-landing {
@@ -145,6 +144,10 @@
     font-size: 1.3rem;
     transition: all 0.2s ease-in-out;
     cursor: pointer;
+}
+
+.page-button-landing:hover {
+    transform: scale(1.1, 1.1);
 }
 
 .landing-page-decoration {
